--- a/C#/Round to the next multiple of 5/Round to the next multiple of 5.csproj
+++ b/C#/Round to the next multiple of 5/Round to the next multiple of 5.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Round_to_the_next_multiple_of_5</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NUnit" Version="3.13.2" />
+  </ItemGroup>
+
 </Project>
