update net version

--- a/C#/Round to the next multiple of 5/Round to the next multiple of 5.csproj
+++ b/C#/Round to the next multiple of 5/Round to the next multiple of 5.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>Round_to_the_next_multiple_of_5</RootNamespace>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
